# water-and-jug

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
.github/workflows/: build.yml
diagrams/: classDiagram.wsd  detailedOperationOfBFSAlgorithm.wsd  sequenceDiagram.wsd
include/: BFSWaterJugSolver.h  WaterJugSolver.h  water-and-jug.h
include/utils/: JugState.h  Validator.h
src/: BFSWaterJugSolver.cpp  water-and-jug.cpp
src/utils/: Validator.cpp
test/: BFSWaterJugSolverTests.cpp  water-and-jug-tests.cpp
test/utils/: ValidatorTests.cpp
